# ESGRAF48

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
proto/: AkkusativModel.proto  DataModel.proto  DativModel.proto  GenusModel.proto  LateSkillsGenitivModel.proto  LateSkillsPassivModel.proto  MetaDataModel.proto  PluralModel.proto  V2SvkModel.proto  VerbEndModel.proto
source/: Age.cpp  Age.h  CMakeLists.txt  CheckableItem.h  DataModel.cpp  DataModel.h  ESGRAF48.cpp  LogoTest.cpp  MetaDataModel.cpp  MetaDataModel.h  MetaDataWidget.cpp  MetaDataWidget.h  PrintableModel.cpp  PrintableModel.h  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  testdata.cpp  testdata.h  version.h.in
source/Age/: Age.cpp  Age.h  CMakeLists.txt
source/CheckableItem/: CMakeLists.txt  CheckableItem.cpp  CheckableItem.h  CheckableItems.cpp  CheckableItems.h
source/CheckableTest/: CMakeLists.txt  CheckableTest.cpp  CheckableTest.h
source/CheckableTestModel/: CMakeLists.txt  CheckableTestModel.cpp  CheckableTestModel.h
source/Genus/: CMakeLists.txt  CheckableItem.cpp  CheckableItem.h  CheckableItems.cpp  CheckableItems.h  GenusModel.cpp  GenusModel.h  GenusWidget.cpp  GenusWidget.h  GenusWidget.ui
source/MetaData/: CMakeLists.txt  MetaDataModel.cpp  MetaDataModel.h  MetaDataWidget.cpp  MetaDataWidget.h  MetaDataWidget.ui
source/PrintableModel/: CMakeLists.txt  PrintableModel.cpp  PrintableModel.h
source/ResultWidget/: AkkusativPR.h  CMakeLists.txt  DativPR.h  GenitivPR.h  GenusPR.h  PRMap.cpp  PRMap.h  PassivPR.h  PluralPR.h  ResultModel.cpp  ResultModel.h  ResultWidget.cpp  ResultWidget.h  ResultWidget.ui  SvkPR.h  TestResult.cpp  TestResult.h  V2PR.h  VerbEndPR.h
source/SubTests/: CMakeLists.txt
source/SubTests/AkkusativDativ/: AkkusativDativWidget.cpp  AkkusativDativWidget.h  AkkusativDativWidget.ui  AkkusativModel.cpp  AkkusativModel.h  CMakeLists.txt  DativModel.cpp  DativModel.h
source/SubTests/Genus/: CMakeLists.txt  GenusModel.cpp  GenusModel.h  GenusWidget.cpp  GenusWidget.h
source/SubTests/LateSkills/: CMakeLists.txt  GenitivModel.cpp  GenitivModel.h  LateSkillsModel.cpp  LateSkillsModel.h  LateSkillsWidget.cpp  LateSkillsWidget.h  LateSkillsWidget.ui  PassivModel.cpp  PassivModel.h
source/SubTests/Plural/: CMakeLists.txt  PluralModel.cpp  PluralModel.h  PluralWidget.cpp  PluralWidget.h  PluralWidget.ui
source/SubTests/V2Svk/: CMakeLists.txt  OTModel.cpp  OTModel.h  TPeModel.cpp  TPeModel.h  TPrModel.cpp  TPrModel.h  V2SvkModel.cpp  V2SvkModel.h  V2SvkWidget.cpp  V2SvkWidget.h  V2SvkWidget.ui  WFModel.cpp  WFModel.h
source/SubTests/VerbEnd/: CMakeLists.txt  VerbEndModel.cpp  VerbEndModel.h  VerbEndWidget.cpp  VerbEndWidget.h  VerbEndWidget.ui
source/VerbEnd/: CMakeLists.txt  VerbEndModel.cpp  VerbEndModel.h  VerbEndWidget.cpp
test/: Age.cpp  CMakeLists.txt  dummy.cpp  loadfile.cpp
